--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" ng-app="swagger-editor">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content=">
+    <meta name="author" content=">
     <title>Swagger-Editor</title>
 
     <link rel="shortcut icon" href="favicon.ico">
