--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en" ng-app="swagger-editor">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content=">
-    <meta name="author" content=">
     <title>Swagger-Editor</title>
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="css/bootstrap.min.css" rel="stylesheet"></link>
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -31,7 +30,6 @@
 	  
 	  .main-menu .nav-list li a { border-top: 1px solid #fff; border-bottom: 1px solid #d5d5d5; }
 	  .main-menu .nav-list li:last-child a { border-bottom-width: 0; }
-	  
     </style>
     
   </head>
@@ -40,7 +38,7 @@
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
           <a href="#apis" class="brand"><b>Swagger-Editor</b></a>
           <div class="nav-collapse">
 			<ul class="nav">
@@ -53,10 +51,18 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 		<div class="row-fluid">
-			<div class="span10 offset1">
+			<div class="span8 offset1">
 				<div ng-view></div>
+			</div>
+			<div class="span3">
+				<div class="alert alert-info">
+					<h1><img src="img/info.png">
+					{{help.header}}
+					</h1>
+					<p>{{help.contents}}</p>
+				</div>
 			</div>
 		</div>
     </div><!-- /container -->
@@ -66,8 +72,9 @@
 	<script src="js/jquery.textarea.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/showdown.js"></script>    
-    <script src="js/angular-1.0.1.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/angular.js"></script>
+    <script src="js/svc-apis.js"></script>
+	<script src="js/app.js"></script>
 	<script src="js/ctrl-apis.js"></script>	
   </body>
 </html>
